Ignore db and txt changes

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+BookTennisCourt/Data/CourtReservationLog.txt
+BookTennisCourt/Data/CourtReservation.db
