added db and txt to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+BookTennisCourt/Data/CourtReservation.db
+BookTennisCourt/Data/CourtReservation.db
