--- a/.gitignore
+++ b/.gitignore
@@ -338,7 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-BookTennisCourt/CreateCalendarEvent/token.pickle
-BookTennisCourt/Data/CourtReservationLog.txt
-BookTennisCourt/Data/CourtReservation.db
+
+# Ignore all pickle files and db files
 *.pickle
+*.db
