--- a/DeployFilesToTargetFolder/DeployFilesToTargetFolder/DeployFilesToTargetFolder.csproj
+++ b/DeployFilesToTargetFolder/DeployFilesToTargetFolder/DeployFilesToTargetFolder.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\netcoreapp3.1\DeployFilesToTargetFolder.exe" />
+  </ItemGroup>
 
 </Project>
